--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                   data-slide-Speed="200"
                 >
                   <li class="accordion-item scroll-animation">
-                    <div>Web Development</h5>
+                    <div>
+                      <h5>Web Development</h5>
                       <div class="icon"></div>
                     </div>
                     <div>
