--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="container">
                 <p class="tag m-b-4">INTRODUCTION</p>
                 <h1 class="m-b-5 m-l-3">
-                  I'm a Data Scientist 
+                  I'm a Data Scientist and Fullstack Developer
                 </h1>
                 <div class="seperator-line"></div>
               </div>
@@ -119,7 +119,7 @@
                 <div class="seperator-line m-b-4 scroll-animation"></div>
                 <p class="scroll-animation">
                     Hey there, I am Makanjuola Mayowa I am a Data Scientist and Fullstack Developer,    
-                    With a background in business intelligence, data analytics, and project management,
+                    With a first class degree in Business Information Systems and a background in business intelligence, data analytics, and project management,
                     I consider myself a ‘forever student,’ 
                     eager to build on my academic foundations while staying in tune with the latest digital trends and technologies.
 
