--- a/index.html
+++ b/index.html
@@ -504,8 +504,7 @@
                     </div>
                     <div>
                       <p>
-                      Found out at a pretty late stage that I have ADHD and Autism. Tough to deal with and affected my life in many negative ways but learning to 
-                      cope with it now. Anyway, if you wanna talk about random stuff, I have most of my socials linked but you can still reach out to me with the contact form. <br>
+                       Anyway, if you wanna talk about random stuff, I have most of my socials linked but you can still reach out to me with the contact form. <br>
                       <br> From Mayowa, with love ❤️. 
                       </p>
                     </div>
